Adding a Login Screen to a Vaadin Application Using Spring Security

--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,16 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- spring security -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
